--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "graphql-news",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
+  "repository": "https://github.com/anthonybrown/hackernews-graphql",
+  "private": true,
   "author": "Tony Brown <tony@tonybrown.me>",
   "license": "MIT",
   "scripts": {
     "start": "babel-node ./server.js"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.1.0",
@@ -19,11 +21,13 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-prettier": "^2.5.0",
-    "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
-    "graphql": "^0.12.3",
     "nodemon": "^1.14.11",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+		"eslint-plugin-prettier": "^2.5.0"
+	},
+		"dependencies": {
+      "express": "^4.16.2",
+      "express-graphql": "^0.6.11",
+      "graphql": "^0.12.3"
   }
 }
