--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -21,13 +22,14 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.5.0",
+    "jest": "22.4.2",
     "nodemon": "^1.14.11",
-    "prettier": "^1.10.2",
-		"eslint-plugin-prettier": "^2.5.0"
-	},
-		"dependencies": {
-      "express": "^4.16.2",
-      "express-graphql": "^0.6.11",
-      "graphql": "^0.12.3"
+    "prettier": "^1.10.2"
+  },
+  "dependencies": {
+    "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.12.3"
   }
 }
