--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "https://github.com/anthonybrown/hackernews-graphql",
   "private": true,
-  "author": "",
+  "author": "Tony Brown <tony@tonybrown.me>",
   "license": "MIT",
   "scripts": {
     "start": "babel-node ./server.js"
