--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
-    "graphql": "^0.12.3"
+    "graphql": "^0.12.3",
+    "graphql-tools": "2.21.0",
+    "lodash": "4.17.5"
   }
 }
