--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "pixel67 <tony@tonybrown.me> (http://tonybrown.me/)",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node ./server.js",
-    "dev": "nodemon server.js --exec babel-node"
+    "start": "babel-node ./server",
+    "dev": "nodemon --exec babel-node ./server"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
