add flow type checker to project

--- a/.babelrc
+++ b/.babelrc
@@ -5,10 +5,12 @@
   "presets": [
     [
       "env", {
+        "es6",
         "targets": {
           "node": "current"
         }
       }
-    ]
+		],
+		"flow",
   ]
 }
